# macro-micro

./: .gitignore  CMakeLists.txt  README.md  load_macro_micro_dependencies.sh  macro_micro_jobscript.sh  precice-config-full-sim.xml
macro-dummy/: CMakeLists.txt  main_macro_dummy.cc  main_macro_dummy.hh  precice-config-dummy.xml
macro-heat/: .Questions.txt.swp  CMakeLists.txt  Questions.txt  macro_heat.hh  main.cc  main_macro_heat.cc  main_macro_heat.hh  myenergyvolumevariables.hh  mysimpleh2o.hh  mysimpleliquid.hh  myvolumevariables.hh  params.input  precice-config-heat.xml  problem.hh  properties.hh  spatialparams.hh  upscaledconductivity.hh
micro-heat/: CMakeLists.txt  main.cc  micro-manager-config.json  micro_sim.cpp  mysimpleliquid.hh  params.input  problem.hh  problem_allencahn.hh  problem_cellproblem.hh  properties.hh  properties_allencahn.hh  properties_cellproblem.hh  run_micro_manager.py  spatialparams_cellproblem.hh
micro-heat/cell_problem/: indices.hh  localresidual.hh  model.hh  volumevariables.hh
nutils-micro-heat/: CMakeLists.txt  micro-manager-config.json  micro_heat.py
python-files-micro-manager/macro-micro-dumux-dummy/: micro-manager-config.json
python-micro-dummy/: CMakeLists.txt  micro-manager-config.json
python-micro-heat/: micro-manager-config.json  micro_heat.py
